--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
-.travis.yml
 language: python
 python:
   - "2.7"
-script: /Users/gsr/Documents/CodeParser/src/logChunkTest.py
+cache: pip
+install:
+  - pip install -r requirements.txt
+script:
+  - python tests.py
