--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
   - "2.7"
-cache: pip
-install:
-  # - pip install -r requirements.txt
+# cache: pip
+# install:
+#   # - pip install -r requirements.txt
 script:
-  # - python tests.py
+  - python /Users/gsr/Documents/CodeParser/src/logChunk/logChunkTest.py
