--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 # install:
 #   # - pip install -r requirements.txt
 script:
-  - python /Users/gsr/Documents/CodeParser/src/logChunk/logChunkTest.py
+  - python ./src/logChunk/logChunkTest.py
