--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - source activate test-environment
-  - python setup.py install
+  # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION dep1 dep2 ...
+  # - source activate test-environment
+  # - python setup.py install
 
 script:
   # Your test script goes here
