travis setup trial 10

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
   # weird travis-ci python paths
-  - export PYTHONPATH=$PYTHONPATH
+  - export PYTHONPATH=$PYTHONPATH:./src/util/
   
   # Replace dep1 dep2 ... with your dependencies
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION dep1 dep2 ...
