travis setup trial 11

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - conda info -a
   # weird travis-ci python paths
   - export PYTHONPATH=$PYTHONPATH:./src/util/
+  - export PYTHONPATH=$PYTHONPATH:./src/
   
   # Replace dep1 dep2 ... with your dependencies
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION dep1 dep2 ...
