--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ install:
 
 script:
   # Your test script goes here
-  - python ./src/logChunk/logChunkTest.py
+  - python /src/logChunk/logChunkTest.py
