--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
   # weird travis-ci python paths
-  - export PYTHONPATH=$PYTHONPATH:$(pwd)
+  - export PYTHONPATH=$PYTHONPATH:./src/util/
+  - export PYTHONPATH=$PYTHONPATH:./src/logChunk/
 
   
   # Replace dep1 dep2 ... with your dependencies
