--- a/src/util/sample_conf.ini
+++ b/src/util/sample_conf.ini
@@ -13,6 +13,6 @@ repo_url_file: repositories.txt
 repo_locations: ~/gitcproc/data/repos/
 
 [Keywords]
-file : keywords.txt
+file : ./src/logChunk/keywords.txt
 
 [Destination]
